Fix: 알림 내용 수정(#40) - url 생성해서 클라이언트에 전달 -> pk 전달